# nix_evaluator

./: Cargo.toml  flake.nix
src/: evaluator.rs  lib.rs  main.rs  serde.rs  value.rs
src/builtins/: mod.rs
src/builtins/definitions/: arithmetic.rs  attrsets.rs  debug.rs  derivations.rs  hash.rs  higher_order.rs  lists.rs  materialization.rs  mod.rs  paths.rs  strings.rs  types.rs
